--- a/2.2.1. spring_hibernate/src/main/resources/db.properties
+++ b/2.2.1. spring_hibernate/src/main/resources/db.properties
@@ -2,7 +2,7 @@
 db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/spring_hiber
 db.username=root
-db.password=root
+db.password=6Tujkhds4!hd655
 
 # Hibernate properties
 hibernate.show_sql=true
